name:               jisantuc-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , hashable
                  , process
                  , pandoc
                  , pandoc-types
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language: Haskell2010
  other-modules:
    Blog.Pandoc
